--- a/index.html
+++ b/index.html
@@ -7,43 +7,43 @@
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <main>
         <section>
-            <h1>
-                YOGA FEATURE PROGRAM
-            </h1>
-            <h2>Our classes
-            </h2>
-<ul>
-    <li>
-        <button type="button">For health</button>
+            <h1>YOGA FEATURE PROGRAM</h1>
+            <h2>Our classesw</h2>
+<ul class="navigation">
+    <li class="navigation-item">
+        <button class="navigation-button" type="button" >For health</button>
     </li>  
-    <li>
-        <button type="button"> For lose weight</button>
+    <li class="navigation-item">
+        <button class="navigation-button" type="button" > For lose weight</button>
     </li>  
-    <li>
-        <button type="button">For childeren</button>
+    <li class="navigation-item" >
+        <button class="navigation-button" type="button">For childeren</button>
     </li>  
-    <li>
-        <button type="button">for elderly</button>
+    <li class="navigation-item" >
+        <button class="navigation-button" type="button">for elderly</button>
     </li>  
 </ul>
-<ul>
-    <li>
+<ul class="gallery">
+    <li class="gallery-item">
         <h3>yoga for health</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
     </li>
-    <li>
+    <li class="gallery-item">
         <h3>yoga for lose weight</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
     </li>
-    <li>
+    <li class="gallery-item">
         <h3>yoga for childeren</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
     </li>
-    <li>
+    <li class="gallery-item">
         <h3>yoga for elderly</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
     </li>
