--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" href="./css/styles.css">
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <main>
         <section>
-            <h1>YOGA FEATURE PROGRAM</h1>
-            <h2>Our classesw</h2>
+            <div class="conteiner">
+            <h1 class="title">YOGA FEATURE PROGRAM</h1>
+            <h2 class="sub-title">Our classesw</h2>
 <ul class="navigation">
     <li class="navigation-item">
         <button class="navigation-button" type="button" >For health</button>
@@ -32,23 +32,40 @@
 </ul>
 <ul class="gallery">
     <li class="gallery-item">
-        <h3>yoga for health</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
+        <div class="gallery-imge imge1"></div>
+        <div class="gallery-contant">
+        <h3 class="gallery-title">yoga for health</h3>
+        <p class="gallery-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
+        <p>Lorem ipsum dolor,</p>
+    </div>
     </li>
     <li class="gallery-item">
-        <h3>yoga for lose weight</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
+        <div class="gallery-imge imge2" ></div>
+        <div class="gallery-contant"> 
+        <h3 class="gallery-title">yoga for lose weight</h3>
+        <p class="gallery-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
+        <p>Lorem ipsum dolor,</p>
+    </div>
+
     </li>
     <li class="gallery-item">
-        <h3>yoga for childeren</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
+        <div class="gallery-imge imge3"></div>
+        <div class="gallery-contant"> 
+        <h3 class="gallery-title">yoga for childeren</h3>
+        <p class="gallery-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
+        <p>Lorem ipsum dolor,</p> 
+        </div>
     </li>
     <li class="gallery-item">
-        <h3>yoga for elderly</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
+        <div class="gallery-imge imge4"></div>
+        <div class="gallery-contant">
+        <h3 class="gallery-title">yoga for elderly</h3>
+        <p class="gallery-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, velit.</p>
+        <p>Lorem ipsum dolor,</p>
+        </div>
     </li>
 </ul>
-
+</div>
         </section>
         
     </main>
